typescript react form controll

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -4,8 +4,8 @@
   "icons": [
     {
       "src": "BKSB512.png",
-      "type": "image/png",
-      "sizes": "512x512"
+      "sizes": "512x512",
+      "type": "image/png"
     }
   ],
   "start_url": ".",
