--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
     "@types/react-dom": "^18.0.5",
     "@types/styled-components": "^5.1.25",
     "apexcharts": "^3.35.3",
+    "install": "^0.13.0",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.0",
     "react-dom": "^18.2.0",
+    "react-helmet": "^6.1.0",
+    "react-helmet-async": "^1.3.0",
     "react-query": "^3.39.1",
     "react-router-dom": "^5.3.0",
     "react-scripts": "5.0.1",
@@ -47,6 +50,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-helmet": "^6.1.5",
     "@types/react-router-dom": "^5.3.3"
   }
 }
